/*
  Licensed to the Apache Software Foundation (ASF) under one or more
  contributor license agreements.  See the NOTICE file distributed with
  this work for additional information regarding copyright ownership.
  The ASF licenses this file to You under the Apache License, Version 2.0
  (the "License"); you may not use this file except in compliance with
  the License.  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 */

syntax = "proto3";

//@WrapArguments
message RequestWrap {
  bool boolValue = 1;
  repeated int32 iArr = 2;
  repeated User user = 3;
}

message Request {
  bool boolValue = 1;
  repeated int32 iArr = 2;
  repeated User user = 3;
}

//@WrapProperty
message ResponseWrap {
  repeated int32 value = 1;
}

message Response {
  repeated int32 value = 1;
}

message User {
  string name = 1;
  repeated User friends = 2;
}